--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 374,
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 375,
    "outputs": [],
    "source": [
     "absPath = str(Path(os.path.abspath(os.getcwd())).absolute())\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 376,
    "outputs": [],
    "source": [
     "# Country Ontology\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 377,
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -140,6 +140,7 @@
     "        list[i].append(genre[i].lower().replace(\"'\",\"\").replace(\" \", \"-\"))\n",
     "    return(list)\n",
     "\n",
+    "\n",
     "def setPlatformID(platform):\n",
     "    return(platform.lower().replace(\" \", \"-\"))\n",
     "\n",
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 378,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 379,
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 379,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 380,
    "outputs": [
     {
      "name": "stdout",
@@ -240,7 +241,6 @@
    ],
    "source": [
     "# Iterate over the games\n",
-    "games.info()\n",
     "for title, row in games.iterrows():\n",
     "    # Create gameID from its title\n",
     "    gameID = createGameID(title)\n",
@@ -263,7 +263,8 @@
     "    #Add hasGenre object property\n",
     "    for genreList in setGenreID(row[\"genres\"]):\n",
     "        for genre in genreList[:len(genreList)//2]:\n",
-    "            g.add((Game, HLTB[\"hasGenre\"], Literal(genre, datatype=XSD.string)))\n",
+    "            if(pd.notnull(genre) and genre != ''):\n",
+    "                g.add((Game, HLTB[\"hasGenre\"], Literal(genre, datatype=XSD.string)))\n",
     "\n",
     "    #Add platform availability\n",
     "    if pd.notna(row[\"platforms\"]):\n",
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 381,
    "outputs": [
     {
      "name": "stdout",
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 382,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -332,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 383,
    "outputs": [],
    "source": [
     "for genre, row in genres.iterrows():\n",
@@ -351,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 384,
    "outputs": [],
    "source": [
     "# Save genre data in the Turtle format\n",
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 385,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -387,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 385,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -396,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 386,
    "outputs": [],
    "source": [
     "for platform, row in platforms.iterrows():\n",
@@ -434,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 387,
    "outputs": [],
    "source": [
     "# Save data in the Turtle format\n",
@@ -448,7 +449,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Company"
+    "### Company"
    ],
    "metadata": {
     "id": "BVPWWFGcnDbO"
@@ -456,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 388,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -470,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 389,
    "outputs": [],
    "source": [
     "#replace space with -, lower case\n",
@@ -495,7 +496,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "video-game-evelopers"
+    "### video-game-evelopers"
    ],
    "metadata": {
     "collapsed": false
@@ -503,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 390,
    "outputs": [],
    "source": [
     "videoGameDevelopers = pd.read_csv(videoGameDevelopersPath, sep=\",\")"
@@ -514,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 391,
    "outputs": [],
    "source": [
     "#replace space with -, lower case\n",
@@ -548,7 +549,7 @@
    "metadata": {
     "id": "dbKlh6J9ozNy"
    },
-   "execution_count": 326,
+   "execution_count": 392,
    "outputs": [
     {
      "name": "stdout",
