--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 393,
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 394,
    "outputs": [],
    "source": [
     "absPath = str(Path(os.path.abspath(os.getcwd())).absolute())\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 395,
    "outputs": [],
    "source": [
     "# Country Ontology\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 396,
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 397,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 398,
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 398,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -210,35 +210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 35922 entries, 688(I) Hunter/Killer to Yooka-Laylee and the Impossible Lair\n",
-      "Data columns (total 13 columns):\n",
-      " #   Column            Non-Null Count  Dtype  \n",
-      "---  ------            --------------  -----  \n",
-      " 0   Unnamed: 0        35922 non-null  int64  \n",
-      " 1   id                35922 non-null  int64  \n",
-      " 2   main_story        17324 non-null  float64\n",
-      " 3   main_plus_extras  11631 non-null  float64\n",
-      " 4   completionist     13107 non-null  float64\n",
-      " 5   all_styles        21112 non-null  float64\n",
-      " 6   coop              183 non-null    float64\n",
-      " 7   versus            274 non-null    float64\n",
-      " 8   type              1314 non-null   object \n",
-      " 9   developers        34080 non-null  object \n",
-      " 10  publishers        32754 non-null  object \n",
-      " 11  platforms         24285 non-null  object \n",
-      " 12  genres            32843 non-null  object \n",
-      "dtypes: float64(6), int64(2), object(5)\n",
-      "memory usage: 3.8+ MB\n"
-     ]
-    }
-   ],
+   "execution_count": 399,
+   "outputs": [],
    "source": [
     "# Iterate over the games\n",
     "for title, row in games.iterrows():\n",
@@ -284,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 400,
    "outputs": [
     {
      "name": "stdout",
@@ -318,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 401,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -333,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 402,
    "outputs": [],
    "source": [
     "for genre, row in genres.iterrows():\n",
@@ -352,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 403,
    "outputs": [],
    "source": [
     "# Save genre data in the Turtle format\n",
@@ -374,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 404,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -388,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 404,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -397,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 405,
    "outputs": [],
    "source": [
     "for platform, row in platforms.iterrows():\n",
@@ -435,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 406,
    "outputs": [],
    "source": [
     "# Save data in the Turtle format\n",
@@ -457,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 407,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -471,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 408,
    "outputs": [],
    "source": [
     "#replace space with -, lower case\n",
@@ -487,6 +460,7 @@
     "  g.add((Company, RDF.type, HLTB.Company))\n",
     "\n",
     "  # Add the Company\n",
+    "  g.add((Company, HLTB[\"indieDeveloper\"], Literal(pd.notnull(row['Developer']), datatype=XSD.boolean)))\n",
     "  g.add((Company, HLTB['officialName'], Literal(row['Developer'], datatype=XSD.string)))\n"
    ],
    "metadata": {
@@ -504,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 409,
    "outputs": [],
    "source": [
     "videoGameDevelopers = pd.read_csv(videoGameDevelopersPath, sep=\",\")"
@@ -515,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 410,
    "outputs": [],
    "source": [
     "#replace space with -, lower case\n",
@@ -531,7 +505,7 @@
     "  g.add((Company, RDF.type, HLTB.Company))\n",
     "\n",
     "  # Add the Company\n",
-    "  g.add((Company, HLTB[\"indieDeveloper\"], Literal(pd.notnull(row['Developer']), datatype=XSD.boolean)))\n"
+    "  g.add((Company, HLTB['officialName'], Literal(row['Developer'], datatype=XSD.string)))\n"
    ],
    "metadata": {
     "collapsed": false
@@ -549,7 +523,7 @@
    "metadata": {
     "id": "dbKlh6J9ozNy"
    },
-   "execution_count": 392,
+   "execution_count": 411,
    "outputs": [
     {
      "name": "stdout",
