Small changes like indentation and a bit of code clean

--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -67,8 +67,8 @@
     "gamesPath = os.path.join(datasetsPath, \"games_cleaned.csv\")\n",
     "vgchartzPath = os.path.join(datasetsPath, \"vgchartz_cleaned.csv\")\n",
     "indiegamesdevelopersPath = os.path.join(datasetsPath, \"indiegamesdevelopers_cleaned_seriesExplode.csv\")\n",
-    "platformsPath = os.path.join(datasetsPath,\"platforms.csv\" )\n",
-    "videoGameDevelopersPath = os.path.join(datasetsPath, \"videogamesdevelopers_cleaned_seriesexplode.csv\" )\n",
+    "platformsPath = os.path.join(datasetsPath, \"platforms.csv\")\n",
+    "videoGameDevelopersPath = os.path.join(datasetsPath, \"videogamesdevelopers_cleaned_seriesexplode.csv\")\n",
     "\n",
     "# Countries-Regions path\n",
     "countriesRegionsPath = os.path.join(datasetsPath, \"countries-regions.csv\")\n",
@@ -115,8 +115,9 @@
     "\n",
     "    return g\n",
     "\n",
+    "\n",
     "#create game URI\n",
-    "def createGameID(title):\n",
+    "def setGameID(title):\n",
     "    # Replace all special chars with \"-\"\n",
     "    gameID = \"\"\n",
     "    for char in title:\n",
@@ -129,20 +130,22 @@
     "    #print(gameID.lower())\n",
     "    return gameID.lower()\n",
     "\n",
+    "\n",
     "#Create genre URI\n",
-    "def setGenreID(genre): ##first half is the original genres, second half are processed and lowercase\n",
-    "    genre = str(genre).replace(\"/\",\", \").replace(\"nan\",\"\")\n",
-    "    genre=genre.split(\", \")\n",
-    "    list=[]\n",
+    "def setGenreID(genre):  ##first half is the original genres, second half are processed and lowercase\n",
+    "    genre = str(genre).replace(\"/\", \", \").replace(\"nan\", \"\")\n",
+    "    genre = genre.split(\", \")\n",
+    "    list = []\n",
     "    for i in range(len(genre)):\n",
     "        list.append([])\n",
     "        list[i].append(genre[i])\n",
-    "        list[i].append(genre[i].lower().replace(\"'\",\"\").replace(\" \", \"-\"))\n",
-    "    return(list)\n",
+    "        list[i].append(genre[i].lower().replace(\"'\", \"\").replace(\" \", \"-\"))\n",
+    "    return (list)\n",
     "\n",
     "\n",
     "def setPlatformID(platform):\n",
-    "    return(platform.lower().replace(\" \", \"-\"))\n",
+    "    return platform.lower().replace(\" \", \"-\")\n",
+    "\n",
     "\n",
     "def setDeveloperID(developer):\n",
     "    return developer.replace(' ', '-', regex=True).str.lower()"
@@ -216,7 +219,7 @@
     "# Iterate over the games\n",
     "for title, row in games.iterrows():\n",
     "    # Create gameID from its title\n",
-    "    gameID = createGameID(title)\n",
+    "    gameID = setGameID(title)\n",
     "\n",
     "    # Create the node to add to the Graph\n",
     "    Game = URIRef(HLTB[gameID])\n",
@@ -228,21 +231,22 @@
     "    g.add((Game, HLTB[\"officialName\"], Literal(title, datatype=XSD.string)))\n",
     "\n",
     "    # Add multiplayer focus\n",
-    "    g.add((Game, HLTB[\"multiplayerFocus\"], Literal(pd.notnull(row[\"coop\"]) or pd.notnull(row[\"versus\"]), datatype=XSD.boolean)))\n",
+    "    g.add((Game, HLTB[\"multiplayerFocus\"],\n",
+    "           Literal(pd.notnull(row[\"coop\"]) or pd.notnull(row[\"versus\"]), datatype=XSD.boolean)))\n",
     "\n",
     "    #Add hltb id\n",
     "    g.add((Game, HLTB[\"id\"], Literal(row[\"id\"], datatype=XSD.int)))\n",
     "\n",
     "    #Add hasGenre object property\n",
     "    for genreList in setGenreID(row[\"genres\"]):\n",
-    "        for genre in genreList[:len(genreList)//2]:\n",
-    "            if(pd.notnull(genre) and genre != ''):\n",
+    "        for genre in genreList[:len(genreList) // 2]:\n",
+    "            if pd.notnull(genre) and genre != '':\n",
     "                g.add((Game, HLTB[\"hasGenre\"], Literal(genre, datatype=XSD.string)))\n",
     "\n",
     "    #Add platform availability\n",
     "    if pd.notna(row[\"platforms\"]):\n",
     "        for platform in row[\"platforms\"].split(\", \"):\n",
-    "            g.add((Game, HLTB[\"releasedOn\"], Literal(setPlatformID(platform), datatype=XSD.string )))\n"
+    "            g.add((Game, HLTB[\"releasedOn\"], Literal(setPlatformID(platform), datatype=XSD.string)))\n"
    ],
    "metadata": {
     "collapsed": false
@@ -297,8 +301,7 @@
     "# Create Graph\n",
     "g = createGraph()\n",
     "# Load the CSV files in memory\n",
-    "genres = pd.read_csv(gamesPath, sep=\",\", index_col=\"genres\")\n",
-    "\n"
+    "genres = pd.read_csv(gamesPath, sep=\",\", index_col=\"genres\")"
    ],
    "metadata": {
     "collapsed": false
@@ -381,26 +384,26 @@
     "    g.add((Platform, HLTB[\"name\"], Literal(platform, datatype=XSD.string)))\n",
     "\n",
     "    #Add popularity if platform is popular\n",
-    "    if(row[\"Popular\"] == True):\n",
+    "    if row[\"Popular\"]:\n",
     "        g.add((Platform, HLTB[\"popular\"], Literal(True, datatype=XSD.boolean)))\n",
     "\n",
     "    #Add release date if present\n",
     "    if pd.notna(row[\"Release date\"]):\n",
     "        time = datetime.combine(datetime.strptime(row[\"Release date\"], '%Y-%M-%d'), datetime.min.time())\n",
-    "        g.add((Platform, HLTB[\"releaseDate\"], Literal(time,datatype=XSD.dateTime)))\n",
+    "        g.add((Platform, HLTB[\"releaseDate\"], Literal(time, datatype=XSD.dateTime)))\n",
     "\n",
     "    #Add CPU information\n",
     "    if pd.notna(row[\"CPU\"]):\n",
-    "        g.add((Platform, HLTB[\"cpu\"], Literal(row[\"CPU\"],datatype=XSD.string)))\n",
+    "        g.add((Platform, HLTB[\"cpu\"], Literal(row[\"CPU\"], datatype=XSD.string)))\n",
     "\n",
     "    #Add CPU bit information\n",
     "    if pd.notna(row[\"\\\"Bits\\\"\"]):\n",
     "        bits = row[\"\\\"Bits\\\"\"].split(\"-\")[0]\n",
-    "        g.add((Platform, HLTB[\"bits\"], Literal(bits,datatype=XSD.int)))\n",
+    "        g.add((Platform, HLTB[\"bits\"], Literal(bits, datatype=XSD.int)))\n",
     "\n",
     "    #Add acronym information\n",
     "    if pd.notna(row[\"Acronym\"]):\n",
-    "        g.add((Platform, HLTB[\"acronym\"], Literal(row[\"Acronym\"],datatype=XSD.string)))"
+    "        g.add((Platform, HLTB[\"acronym\"], Literal(row[\"Acronym\"], datatype=XSD.string)))"
    ],
    "metadata": {
     "collapsed": false
@@ -450,18 +453,17 @@
     "#replace space with -, lower case\n",
     "indiegamesdevelopers['companyID'] = setDeveloperID(indiegamesdevelopers['Developer'])\n",
     "\n",
-    "\n",
     "#indiegamesdevelopers.info()\n",
     "for index, row in indiegamesdevelopers.iterrows():\n",
-    "  # Create the node to add to the Graph\n",
-    "  Company = URIRef(HLTB[row['companyID']])\n",
+    "    # Create the node to add to the Graph\n",
+    "    Company = URIRef(HLTB[row['companyID']])\n",
     "\n",
-    "  # Add triples using store's add() method.\n",
-    "  g.add((Company, RDF.type, HLTB.Company))\n",
+    "    # Add triples using store's add() method.\n",
+    "    g.add((Company, RDF.type, HLTB.Company))\n",
     "\n",
-    "  # Add the Company\n",
-    "  g.add((Company, HLTB[\"indieDeveloper\"], Literal(pd.notnull(row['Developer']), datatype=XSD.boolean)))\n",
-    "  g.add((Company, HLTB['officialName'], Literal(row['Developer'], datatype=XSD.string)))\n"
+    "    # Add the Company\n",
+    "    g.add((Company, HLTB[\"indieDeveloper\"], Literal(pd.notnull(row['Developer']), datatype=XSD.boolean)))\n",
+    "    g.add((Company, HLTB['officialName'], Literal(row['Developer'], datatype=XSD.string)))\n"
    ],
    "metadata": {
     "collapsed": false
@@ -495,17 +497,16 @@
     "#replace space with -, lower case\n",
     "videoGameDevelopers['companyID'] = setDeveloperID(videoGameDevelopers['Developer'])\n",
     "\n",
-    "\n",
     "#indiegamesdevelopers.info()\n",
     "for index, row in videoGameDevelopers.iterrows():\n",
-    "  # Create the node to add to the Graph\n",
-    "  Company = URIRef(HLTB[row['companyID']])\n",
+    "    # Create the node to add to the Graph\n",
+    "    Company = URIRef(HLTB[row['companyID']])\n",
     "\n",
-    "  # Add triples using store's add() method.\n",
-    "  g.add((Company, RDF.type, HLTB.Company))\n",
+    "    # Add triples using store's add() method.\n",
+    "    g.add((Company, RDF.type, HLTB.Company))\n",
     "\n",
-    "  # Add the Company\n",
-    "  g.add((Company, HLTB['officialName'], Literal(row['Developer'], datatype=XSD.string)))\n"
+    "    # Add the Company\n",
+    "    g.add((Company, HLTB['officialName'], Literal(row['Developer'], datatype=XSD.string)))\n"
    ],
    "metadata": {
     "collapsed": false
