--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "absPath = str(Path(os.path.abspath(os.getcwd())).absolute())\n",
@@ -69,6 +69,12 @@
     "indiegamesdevelopersPath = os.path.join(datasetsPath, \"indiegamesdevelopers_cleaned_seriesExplode.csv\")\n",
     "platformsPath = os.path.join(datasetsPath,\"platforms.csv\" )\n",
     "videoGameDevelopersPath = os.path.join(datasetsPath, \"videogamesdevelopers_cleaned_seriesexplode.csv\" )\n",
+    "completionTimePath = os.path.join(datasetsPath, \"completion_time.csv\")\n",
+    "\n",
+    "# Setup raw datasets\n",
+    "rawVGChartsPath = os.path.join(rawdatasetsPath, \"vgchartz-7_7_2020.csv\")\n",
+    "rawGamesPath = os.path.join(rawdatasetsPath, \"games.csv\")\n",
+    "\n",
     "\n",
     "# Countries-Regions path\n",
     "countriesRegionsPath = os.path.join(datasetsPath, \"countries-regions.csv\")\n",
@@ -78,7 +84,9 @@
     "gamesTTLPath = os.path.join(rdfPath, \"games.ttl\")\n",
     "companyTTLPath = os.path.join(rdfPath, \"company.ttl\")\n",
     "platformsTTLPath = os.path.join(rdfPath, \"platforms.ttl\")\n",
-    "videoGameDevelopersTTLPath = os.path.join(rdfPath, \"videoGameDevelopers.ttl\")"
+    "videoGameDevelopersTTLPath = os.path.join(rdfPath, \"videoGameDevelopers.ttl\")\n",
+    "statsTTLPath = os.path.join(rdfPath, \"stats.ttl\")\n",
+    "gameSalesTTLPath = os.path.join(rdfPath, \"gameSales.ttl\")"
    ],
    "metadata": {
     "id": "LrSYA9LWmzfq"
@@ -86,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Country Ontology\n",
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -142,7 +150,7 @@
     "\n",
     "\n",
     "def setPlatformID(platform):\n",
-    "    return(platform.lower().replace(\" \", \"-\"))\n",
+    "    return(platform.lower().replace(\" \", \"-\").replace(\"/\",\"-\").replace(\"&\",\"-\"))\n",
     "\n",
     "def setDeveloperID(developer):\n",
     "    return developer.replace(' ', '-', regex=True).str.lower()"
@@ -175,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -187,13 +195,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
-    "games = pd.read_csv(gamesPath, sep=\",\", index_col=\"title\")\n",
-    "vgchartz = pd.read_csv(vgchartzPath, sep=\",\", index_col=\"title\")\n",
-    "#indiegamesdevelopers = pd.read_csv(indiegamesdevelopersPath, sep=\",\", index_col=\"title\") Borowei\n"
+    "games = pd.read_csv(gamesPath, sep=\",\",index_col=\"title\")\n",
+    "vgchartz = pd.read_csv(vgchartzPath, sep=\",\")\n",
+    "platforms = pd.read_csv(platformsPath,sep=\",\")\n",
+    "\n",
+    "merged = pd.merge(vgchartz, platforms, left_on='console', right_on='Acronym', how='left')"
    ],
    "metadata": {
     "collapsed": false
@@ -201,16 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Iterate over the games\n",
@@ -234,15 +235,38 @@
     "    g.add((Game, HLTB[\"id\"], Literal(row[\"id\"], datatype=XSD.int)))\n",
     "\n",
     "    #Add hasGenre object property\n",
-    "    for genreList in setGenreID(row[\"genres\"]):\n",
-    "        for genre in genreList[:len(genreList)//2]:\n",
-    "            if(pd.notnull(genre) and genre != ''):\n",
-    "                g.add((Game, HLTB[\"hasGenre\"], Literal(genre, datatype=XSD.string)))\n",
+    "    for iterator in setGenreID(row[\"genres\"]):\n",
+    "        if(pd.notnull(iterator[1]) and iterator[1] != ''):\n",
+    "                g.add((Game, HLTB[\"hasGenre\"], URIRef(HLTB[iterator[1]])))\n",
     "\n",
     "    #Add platform availability\n",
     "    if pd.notna(row[\"platforms\"]):\n",
     "        for platform in row[\"platforms\"].split(\", \"):\n",
-    "            g.add((Game, HLTB[\"releasedOn\"], Literal(setPlatformID(platform), datatype=XSD.string )))\n"
+    "            g.add((Game, HLTB[\"releasedOn\"], URIRef(HLTB[setPlatformID(platform)])))\n",
+    "\n",
+    "             #Add Stats object property\n",
+    "            g.add((Game, HLTB[\"hasStats\"], URIRef(HLTB[\"stats-\"+str(createGameID(title)) + \"___\" + str(setPlatformID(platform))])))\n",
+    "\n",
+    "            # Add Sales object property\n",
+    "            game = merged.loc[(merged['title'] == title) & (merged['Platform'] == platform)]\n",
+    "            if not game.empty:\n",
+    "                if (pd.notna(game[\"pal_sales\"].iloc[0])):\n",
+    "                    GameSalesID=URIRef(HLTB[\"sales-\"+str(createGameID(title))+\"___\"+str(setPlatformID(platform))+\"___\"+\"eu\"])\n",
+    "                    g.add((Game, HLTB[\"sold\"], GameSalesID))\n",
+    "                if (pd.notna(game[\"na_sales\"].iloc[0])):\n",
+    "                    GameSalesID=URIRef(HLTB[\"sales-\"+str(createGameID(title))+\"___\"+str(setPlatformID(platform))+\"___\"+\"na\"])\n",
+    "                    g.add((Game, HLTB[\"sold\"], GameSalesID))\n",
+    "                if (pd.notna(game[\"jp_sales\"].iloc[0])):\n",
+    "                    GameSalesID=URIRef(HLTB[\"sales-\"+str(createGameID(title))+\"___\"+str(setPlatformID(platform))+\"___\"+\"jp\"])\n",
+    "                    g.add((Game, HLTB[\"sold\"], GameSalesID))\n",
+    "                if (pd.notna(game[\"other_sales\"].iloc[0])):\n",
+    "                    GameSalesID=URIRef(HLTB[\"sales-\"+str(createGameID(title))+\"___\"+str(setPlatformID(platform))+\"___\"+\"other\"])\n",
+    "                    g.add((Game, HLTB[\"sold\"], GameSalesID))\n",
+    "                if (pd.notna(game[\"total_shipped\"].iloc[0])):\n",
+    "                    GameSalesID=URIRef(HLTB[\"sales-\"+str(createGameID(title))+\"___\"+str(setPlatformID(platform))+\"___\"+\"global\"])\n",
+    "                    g.add((Game, HLTB[\"sold\"], GameSalesID))\n",
+    "\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
@@ -257,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -291,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -306,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "for genre, row in genres.iterrows():\n",
@@ -325,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# Save genre data in the Turtle format\n",
@@ -347,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -361,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 12,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -370,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "for platform, row in platforms.iterrows():\n",
@@ -408,12 +432,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "# Save data in the Turtle format\n",
     "with open(platformsTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
     "    fp.write(g.serialize(format=\"turtle\"))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Stats\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "g = createGraph()\n",
+    "games = pd.read_csv(gamesPath, sep=\",\")\n",
+    "vgchartz = pd.read_csv(vgchartzPath, sep=\",\")\n",
+    "completionTime = pd.read_csv(completionTimePath, sep=\",\")\n",
+    "platforms = pd.read_csv(platformsPath,sep=\",\")\n",
+    "\n",
+    "merged_temp = pd.merge(games, completionTime, left_on=  'id',\n",
+    "                  right_on= 'gameID')\n",
+    "merged_temp1 = pd.merge(vgchartz, platforms, left_on='console', right_on='Acronym', how='left')\n",
+    "merged = pd.merge(merged_temp, merged_temp1, left_on = [\"title\",\"platform\"], right_on=[\"title\",\"Platform\"], how='left')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "for id, row in merged.iterrows():\n",
+    "    if(pd.notna(row[\"title\"]) and pd.notna(row[\"platform\"])):\n",
+    "        StatsID = URIRef(HLTB[createGameID(\"stats-\"+str(createGameID(row[\"title\"]))) + \"___\" + str(setPlatformID(row[\"platform\"]))])\n",
+    "\n",
+    "        #Adding node type\n",
+    "        g.add((StatsID, HLTB.Type, HLTB.Stats))\n",
+    "\n",
+    "        #Add Time information\n",
+    "        g.add((StatsID, HLTB[\"polledTime\"], Literal(row[\"count_comp\"],datatype=XSD.int)))\n",
+    "        g.add((StatsID, HLTB[\"mainTime\"],Literal(row[\"comp_main\"], datatype=XSD.int)))\n",
+    "        g.add((StatsID, HLTB[\"mainPlusTime\"],Literal(row[\"comp_plus\"], datatype=XSD.int)))\n",
+    "        g.add((StatsID, HLTB[\"completionistTime\"],Literal(row[\"comp_100\"], datatype=XSD.int)))\n",
+    "        g.add((StatsID, HLTB[\"slowestTime\"],Literal(row[\"comp_low\"], datatype=XSD.int)))\n",
+    "        g.add((StatsID, HLTB[\"fastestTime\"],Literal(row[\"comp_high\"], datatype=XSD.int)))\n",
+    "\n",
+    "        #Add remaining stats\n",
+    "        if pd.notna(row[\"critic_score\"]):\n",
+    "            g.add((StatsID, HLTB[\"criticScore\"], Literal(row[\"critic_score\"],datatype=XSD.float)))\n",
+    "        if pd.notna(row[\"user_score\"]):\n",
+    "            g.add((StatsID, HLTB[\"userScore\"], Literal(row[\"user_score\"], datatype=XSD.float)))\n",
+    "\n",
+    "        if pd.notna(row[\"release_date\"]):\n",
+    "            time = datetime.combine(datetime.strptime(row[\"release_date\"], '%Y-%M-%d'), datetime.min.time())\n",
+    "            g.add((StatsID, HLTB[\"releaseDate\"], Literal(time,datatype=XSD.dateTime)))\n",
+    "\n",
+    "        #Add \"onPlatform\" object property\n",
+    "        g.add((StatsID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"platform\"])])))\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved company TTL file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Save the data in the Turtle format\n",
+    "with open(statsTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
+    "    fp.write(g.serialize(format=\"turtle\"))\n",
+    "\n",
+    "print(\"Saved company TTL file.\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Game sales"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [],
+   "source": [
+    "g = createGraph()\n",
+    "vgchartz = pd.read_csv(vgchartzPath, sep=\",\")\n",
+    "platforms = pd.read_csv(platformsPath,sep=\",\")\n",
+    "\n",
+    "merged = pd.merge(vgchartz, platforms, left_on='console', right_on='Acronym', how='left')\n",
+    "merged.to_csv(\"prova.csv\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "for id, row in merged.iterrows():\n",
+    "    if(pd.notna(row[\"Platform\"])):\n",
+    "\n",
+    "        if (pd.notna(row[\"pal_sales\"])):\n",
+    "            GameSalesID=URIRef(HLTB[\"sales-\"+str(createGameID(row[\"title\"]))+\"___\"+str(setPlatformID(row[\"Platform\"]))+\"___\"+\"eu\"])\n",
+    "            g.add((GameSalesID, HLTB.Type, HLTB.Sales))\n",
+    "            g.add((GameSalesID, HLTB[\"unitsSold\"], Literal(row[\"pal_sales\"], datatype=XSD.float)))\n",
+    "            g.add((GameSalesID, HLTB[\"locatedIn\"], URIRef(HLTB[\"eu\"])))\n",
+    "            g.add((GameSalesID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"Platform\"])])))\n",
+    "\n",
+    "        if (pd.notna(row[\"jp_sales\"])):\n",
+    "            GameSalesID=URIRef(HLTB[\"sales-\"+str(createGameID(row[\"title\"]))+\"___\"+str(setPlatformID(row[\"Platform\"]))+\"___\"+\"jp\"])\n",
+    "            g.add((GameSalesID, HLTB.Type, HLTB.Sales))\n",
+    "            g.add((GameSalesID, HLTB[\"unitsSold\"], Literal(row[\"jp_sales\"], datatype=XSD.float)))\n",
+    "            g.add((GameSalesID, HLTB[\"locatedIn\"], URIRef(HLTB[\"jp\"])))\n",
+    "            g.add((GameSalesID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"Platform\"])])))\n",
+    "\n",
+    "        if (pd.notna(row[\"na_sales\"])):\n",
+    "            GameSalesID=URIRef(HLTB[\"sales-\"+str(createGameID(row[\"title\"]))+\"___\"+str(setPlatformID(row[\"Platform\"]))+\"___\"+\"na\"])\n",
+    "            g.add((GameSalesID, HLTB.Type, HLTB.Sales))\n",
+    "            g.add((GameSalesID, HLTB[\"unitsSold\"], Literal(row[\"na_sales\"], datatype=XSD.float)))\n",
+    "            g.add((GameSalesID, HLTB[\"locatedIn\"], URIRef(HLTB[\"na\"])))\n",
+    "            g.add((GameSalesID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"Platform\"])])))\n",
+    "\n",
+    "        if (pd.notna(row[\"other_sales\"])):\n",
+    "            GameSalesID=URIRef(HLTB[\"sales-\"+str(createGameID(row[\"title\"]))+\"___\"+str(setPlatformID(row[\"Platform\"]))+\"___\"+\"other\"])\n",
+    "            g.add((GameSalesID, HLTB.Type, HLTB.Sales))\n",
+    "            g.add((GameSalesID, HLTB[\"unitsSold\"], Literal(row[\"other_sales\"], datatype=XSD.float)))\n",
+    "            g.add((GameSalesID, HLTB[\"locatedIn\"], URIRef(HLTB[\"other\"])))\n",
+    "            g.add((GameSalesID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"Platform\"])])))\n",
+    "\n",
+    "        if (pd.notna(row[\"total_shipped\"])):\n",
+    "            GameSalesID=URIRef(HLTB[\"sales-\"+str(createGameID(row[\"title\"]))+\"___\"+str(setPlatformID(row[\"Platform\"]))+\"___\"+\"global\"])\n",
+    "            g.add((GameSalesID, HLTB.Type, HLTB.Sales))\n",
+    "            g.add((GameSalesID, HLTB[\"unitsSold\"], Literal(row[\"total_shipped\"], datatype=XSD.float)))\n",
+    "            g.add((GameSalesID, HLTB[\"locatedIn\"], URIRef(HLTB[\"global\"])))\n",
+    "            g.add((GameSalesID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"Platform\"])])))\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved company TTL file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save the data in the Turtle format\n",
+    "with open(gameSalesTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
+    "    fp.write(g.serialize(format=\"turtle\"))\n",
+    "\n",
+    "print(\"Saved company TTL file.\")"
    ],
    "metadata": {
     "collapsed": false
@@ -430,12 +639,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "# Create Graph\n",
     "g = createGraph()\n",
     "# Load the CSV files in memory\n",
+    "\n",
     "indiegamesdevelopers = pd.read_csv(indiegamesdevelopersPath, sep=\",\")"
    ],
    "metadata": {
@@ -444,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "#replace space with -, lower case\n",
@@ -478,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "videoGameDevelopers = pd.read_csv(videoGameDevelopersPath, sep=\",\")"
@@ -489,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "#replace space with -, lower case\n",
@@ -523,7 +733,7 @@
    "metadata": {
     "id": "dbKlh6J9ozNy"
    },
-   "execution_count": 411,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
