Added country to Panasonic directly on platforms.csv Small code clean

--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -100,6 +100,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Function definition"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 396,
    "outputs": [],
@@ -198,15 +207,6 @@
     "vgchartz = pd.read_csv(vgchartzPath, sep=\",\", index_col=\"title\")\n",
     "#indiegamesdevelopers = pd.read_csv(indiegamesdevelopersPath, sep=\",\", index_col=\"title\") Borowei\n"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 398,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
@@ -358,15 +358,6 @@
     "# Load the CSV files in memory\n",
     "platforms = pd.read_csv(platformsPath, sep=\",\", index_col=\"Platform\")"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 404,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
