--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -340,9 +340,9 @@
    "source": [
     "# Create Graph\n",
     "g = createGraph()\n",
+    "\n",
     "# Load the CSV files in memory\n",
-    "genres = pd.read_csv(gamesPath, sep=\",\", index_col=\"genres\")\n",
-    "\n"
+    "genres = pd.read_csv(gamesPath, sep=\",\", index_col=\"genres\")"
    ]
   },
   {
@@ -403,15 +403,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "13l-L1GCruC2"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {
     "id": "FPGiytrTruC2"
@@ -426,7 +417,7 @@
     "    g.add((Platform, HLTB[\"name\"], Literal(platform, datatype=XSD.string)))\n",
     "\n",
     "    #Add popularity if platform is popular\n",
-    "    if (row[\"Popular\"] == True):\n",
+    "    if row[\"Popular\"]:\n",
     "        g.add((Platform, HLTB[\"popular\"], Literal(True, datatype=XSD.boolean)))\n",
     "\n",
     "    #Add release date if present\n",
@@ -500,7 +491,7 @@
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
-    "    if (pd.notna(row[\"title\"]) and pd.notna(row[\"platform\"])):\n",
+    "    if pd.notna(row[\"title\"]) and pd.notna(row[\"platform\"]):\n",
     "        StatsID = URIRef(HLTB[createGameID(\"stats-\" + str(createGameID(row[\"title\"]))) + \"___\" + str(\n",
     "            setPlatformID(row[\"platform\"]))])\n",
     "\n",
@@ -526,7 +517,7 @@
     "            g.add((StatsID, HLTB[\"releaseDate\"], Literal(time, datatype=XSD.dateTime)))\n",
     "\n",
     "        #Add \"onPlatform\" object property\n",
-    "        g.add((StatsID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"platform\"])])))\n"
+    "        g.add((StatsID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"platform\"])])))"
    ]
   },
   {
@@ -589,9 +580,9 @@
    "outputs": [],
    "source": [
     "for id, row in merged.iterrows():\n",
-    "    if (pd.notna(row[\"Platform\"])):\n",
+    "    if pd.notna(row[\"Platform\"]):\n",
     "\n",
-    "        if (pd.notna(row[\"pal_sales\"])):\n",
+    "        if pd.notna(row[\"pal_sales\"]):\n",
     "            GameSalesID = URIRef(HLTB[\"sales-\" + str(createGameID(row[\"title\"])) + \"___\" + str(\n",
     "                setPlatformID(row[\"Platform\"])) + \"___\" + \"eu\"])\n",
     "            g.add((GameSalesID, HLTB.Type, HLTB.Sales))\n",
@@ -599,7 +590,7 @@
     "            g.add((GameSalesID, HLTB[\"locatedIn\"], URIRef(HLTB[\"eu\"])))\n",
     "            g.add((GameSalesID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"Platform\"])])))\n",
     "\n",
-    "        if (pd.notna(row[\"jp_sales\"])):\n",
+    "        if pd.notna(row[\"jp_sales\"]):\n",
     "            GameSalesID = URIRef(HLTB[\"sales-\" + str(createGameID(row[\"title\"])) + \"___\" + str(\n",
     "                setPlatformID(row[\"Platform\"])) + \"___\" + \"jp\"])\n",
     "            g.add((GameSalesID, HLTB.Type, HLTB.Sales))\n",
@@ -607,7 +598,7 @@
     "            g.add((GameSalesID, HLTB[\"locatedIn\"], URIRef(HLTB[\"jp\"])))\n",
     "            g.add((GameSalesID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"Platform\"])])))\n",
     "\n",
-    "        if (pd.notna(row[\"na_sales\"])):\n",
+    "        if pd.notna(row[\"na_sales\"]):\n",
     "            GameSalesID = URIRef(HLTB[\"sales-\" + str(createGameID(row[\"title\"])) + \"___\" + str(\n",
     "                setPlatformID(row[\"Platform\"])) + \"___\" + \"na\"])\n",
     "            g.add((GameSalesID, HLTB.Type, HLTB.Sales))\n",
@@ -615,7 +606,7 @@
     "            g.add((GameSalesID, HLTB[\"locatedIn\"], URIRef(HLTB[\"na\"])))\n",
     "            g.add((GameSalesID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"Platform\"])])))\n",
     "\n",
-    "        if (pd.notna(row[\"other_sales\"])):\n",
+    "        if pd.notna(row[\"other_sales\"]):\n",
     "            GameSalesID = URIRef(HLTB[\"sales-\" + str(createGameID(row[\"title\"])) + \"___\" + str(\n",
     "                setPlatformID(row[\"Platform\"])) + \"___\" + \"other\"])\n",
     "            g.add((GameSalesID, HLTB.Type, HLTB.Sales))\n",
@@ -623,13 +614,13 @@
     "            g.add((GameSalesID, HLTB[\"locatedIn\"], URIRef(HLTB[\"other\"])))\n",
     "            g.add((GameSalesID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"Platform\"])])))\n",
     "\n",
-    "        if (pd.notna(row[\"total_shipped\"])):\n",
+    "        if pd.notna(row[\"total_shipped\"]):\n",
     "            GameSalesID = URIRef(HLTB[\"sales-\" + str(createGameID(row[\"title\"])) + \"___\" + str(\n",
     "                setPlatformID(row[\"Platform\"])) + \"___\" + \"global\"])\n",
     "            g.add((GameSalesID, HLTB.Type, HLTB.Sales))\n",
     "            g.add((GameSalesID, HLTB[\"unitsSold\"], Literal(row[\"total_shipped\"], datatype=XSD.float)))\n",
     "            g.add((GameSalesID, HLTB[\"locatedIn\"], URIRef(HLTB[\"global\"])))\n",
-    "            g.add((GameSalesID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"Platform\"])])))\n"
+    "            g.add((GameSalesID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"Platform\"])])))"
    ]
   },
   {
