--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {
     "id": "LrSYA9LWmzfq"
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {
     "id": "J3Pw_mt1ruCz"
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,16 +782,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N4b0823f9176749a7a4e8c6962048d4a1 (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N735b9b9d83fe4875848c0c1b78dfb4b7 (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,30 +866,21 @@
     "\n",
     "#countriesregions.info()\n",
     "for index, row in countriesregions.iterrows():\n",
-    "    Region = URIRef(HLTB[row['countryID']])\n",
-    "\n",
+    "    \n",
     "    for c in str(row['Country']).split(','):\n",
-    "        cName = row['Country'].strip()\n",
+    "        cName = c.strip()\n",
+    "\n",
     "        if (countries.index == cName).any():\n",
     "            code = str(countries[countries.index == cName]['Alpha-2 code'][0]).lower()\n",
-    "            Country = URIRef(CNS[code])\n",
-    "\n",
-    "            if row['Region'] == 'eu':\n",
-    "                g.add((Region, HLTB['subClassOf'], Literal(Country, datatype=XSD.string)))\n",
-    "\n",
-    "            elif row['Region'] == 'jp':\n",
-    "                g.add((Region, HLTB['subClassOf'], Literal(Country, datatype=XSD.string)))\n",
-    "\n",
-    "            elif row['Region'] == 'na':\n",
-    "                g.add((Region, HLTB['subClassOf'], Literal(Country, datatype=XSD.string)))\n",
-    "\n",
-    "            else:\n",
-    "                g.add((Region, HLTB['subClassOf'], Literal(Country, datatype=XSD.string)))"
+    "            Country = URIRef(CNS[row['countryID']])\n",
+    "            g.add((Country, RDF.type, CNS.Country))\n",
+    "            g.add((Country, HLTB['subClassOf'], Literal(row['Region'], datatype=XSD.string)))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
