--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,14 +873,14 @@
     "        if (countries.index == cName).any():\n",
     "            code = str(countries[countries.index == cName]['Alpha-2 code'][0]).lower()\n",
     "            Country = URIRef(CNS[row['countryID']])\n",
-    "            g.add((Country, RDF.type, CNS.Country))\n",
+    "            g.add((Country, RDF.type, HLTB.Country))\n",
     "            g.add((Country, HLTB['subClassOf'], Literal(row['Region'], datatype=XSD.string)))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
