--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 107,
    "metadata": {
     "id": "LrSYA9LWmzfq"
    },
@@ -90,7 +90,7 @@
     "statsTTLPath = os.path.join(rdfPath, \"stats.ttl\")\n",
     "gameSalesTTLPath = os.path.join(rdfPath, \"gameSales.ttl\")\n",
     "regionsTTLPath = os.path.join(rdfPath, \"regions.ttl\")\n",
-    "countriesregionsTTLPath = os.path.join(rdfPath, \"countriesregions.ttl\")\n"
+    "countriesTTLPath = os.path.join(rdfPath, \"countries.ttl\")\n"
    ]
   },
   {
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,16 +782,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N735b9b9d83fe4875848c0c1b78dfb4b7 (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N5f95be725f8d4fd8a3963489fe6ae1e9 (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,24 +800,24 @@
     "# Create the node to add to the Graph\n",
     "Region = URIRef(HLTB['eu'])\n",
     "g.add((Region, RDF.type, HLTB.Region))\n",
-    "g.add((Region, HLTB[{'eu', 'jp', 'na', 'other'}], Literal('eu', datatype=XSD.string)))\n",
+    "g.add((Region, HLTB[{'eu', 'jp', 'na', 'other', 'global'}], Literal('eu', datatype=XSD.string)))\n",
     "\n",
     "Region = URIRef(HLTB['jp'])\n",
     "g.add((Region, RDF.type, HLTB.Region))\n",
-    "g.add((Region, HLTB[{'eu', 'jp', 'na', 'other'}], Literal('jp', datatype=XSD.string)))\n",
+    "g.add((Region, HLTB[{'eu', 'jp', 'na', 'other', 'global'}], Literal('jp', datatype=XSD.string)))\n",
     "\n",
     "Region = URIRef(HLTB['na'])\n",
     "g.add((Region, RDF.type, HLTB.Region))\n",
-    "g.add((Region, HLTB[{'eu', 'jp', 'na', 'other'}], Literal('na', datatype=XSD.string)))\n",
+    "g.add((Region, HLTB[{'eu', 'jp', 'na', 'other', 'global'}], Literal('na', datatype=XSD.string)))\n",
     "\n",
     "Region = URIRef(HLTB['other'])\n",
     "g.add((Region, RDF.type, HLTB.Region))\n",
-    "g.add((Region, HLTB[{'eu', 'jp', 'na', 'other'}], Literal('other', datatype=XSD.string)))"
+    "g.add((Region, HLTB[{'eu', 'jp', 'na', 'other', 'global'}], Literal('other', datatype=XSD.string)))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
    ],
    "source": [
     "# Save the data in the Turtle format\n",
-    "with open(countriesregionsTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
+    "with open(countriesTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
     "    fp.write(g.serialize(format=\"turtle\"))\n",
     "\n",
     "print(\"Saved Regions TTL file.\")"
